syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

package com.goodfood.user;

message Role {
  string id = 1;
  string code = 2;
  string label = 3;
}

message MainAddress {
  string id = 1;
  string street = 2;
  string zipCode = 3;
  string country = 4;
  repeated int32 coordinates = 5;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  MainAddress mainAddress = 6;
  Role role = 7;
  google.protobuf.Struct token = 8;
}

service UserService {
  rpc Register (UserCreateInput) returns (User) {}
  rpc GetUser (UserId) returns (User) {}
  rpc UpdateUser (UserCreateInput) returns (User) {}
  rpc DeleteUser (UserId) returns (google.protobuf.Empty) {}
  rpc ListUser (UserId) returns (UserList) {}
  rpc LogIn (logInInput) returns (User) {}
  rpc LogOut (token) returns (google.protobuf.Empty) {}
  rpc ChangePassword (changePasswordInput) returns (User) {}
  rpc ChangeRole (changeRoleInput) returns (User) {}
}

service MainAddressService {
  rpc GetMainAddress (MainAddressId) returns (MainAddress) {}
  rpc DeleteMainAddress (MainAddressId) returns (google.protobuf.Empty) {}
}

message UserCreateInput {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 5;
  string phone = 6;
  MainAddressInput mainAddress = 7;
  RoleInput role = 8;
}

message MainAddressInput {
  string street = 1;
  string zipCode = 2;
  string country = 3;
  repeated int32 coordinates = 4;
}

message RoleInput {
  string code = 1;
}

message UserId {
  string id = 1;
}

message UserList {
  repeated User users = 1;
}

message logInInput {
  string userId = 1;
  string email = 2;
  string password = 3;
}

message token {
  google.protobuf.Struct token = 1;
}

message changePasswordInput {
  string oldPassword = 1;
  string newPassword = 2;
}

message changeRoleInput {
  string userId = 1;
  string roleCode = 2;
}

message MainAddressId {
  string id = 1;
}